--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-</h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>html index</title>
+    </head>
+<body>
+    <h1><b>Zoe Siedenstrang's Website</b></h1>
+    <nav>
+        <ul>
+            <li><a href="#">Media</a></li>
+            <li><a href="#">Tags</a></li>
+            <li><a href="#">Nested</a></li>
+        </ul>
+    </nav>
+    <p>
+        Welcome to my website. I am a <i>senior</i>
+        at <u>Boise State University</u>. <br> I am studying
+        <strong>Media Arts and Korean.</strong> I will 
+        graduate in <em>May 2022</em>.
+    </p>
+    <img src="BSU-logo.jpg" width="150" height="120">
+   
+    <h3>Who is Zoe?</h3>
+    <img src="picture-zoe.jpeg" width="400" height="420">
+    <p>Get to know me! Here are some fun facts all about me...</p>
+    <ul>
+        <li>I was born and raised in Boise, Idaho.</li>
+        <li>I had a pet pig for 7 years. His name was Chuck.</li>
+        <li>In 2019, I studied abroad in South Korea.</li>
+    </ul>
+        <figure>
+            <img src="picture-seoul.jpeg" height="450" width="350">
+            <figcaption>Namsan Tower - Seoul, South Korea</figcaption>
+        </figure>
+
+
+
+<footer>
+    <p>Background Music</p>
+    <audio controls> 
+        <source src="background-music.mp3" type="audio/mp3">
+    </audio>
+</footer>
+</body>
+</html>
