--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <h1><b>Zoe Siedenstrang's Website</b></h1>
     <nav>
         <ul>
-            <li><a href="#">Media</a></li>
-            <li><a href="#">Tags</a></li>
-            <li><a href="#">Nested</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="tags.html">Tags</a></li>
+            <li><a href="nested.html">Nested</a></li>
         </ul>
     </nav>
     <p>
@@ -32,9 +32,6 @@
             <img src="picture-seoul.jpeg" height="450" width="350">
             <figcaption>Namsan Tower - Seoul, South Korea</figcaption>
         </figure>
-
-
-
 <footer>
     <p>Background Music</p>
     <audio controls> 
