--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>html index</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <h1><b>Zoe Siedenstrang's Website</b></h1>
