--- a/index.html
+++ b/index.html
@@ -3,41 +3,46 @@
     <head>
         <title>html index</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" type="text/css">
     </head>
 <body>
-    <h1><b>Zoe Siedenstrang's Website</b></h1>
-    <nav>
-        <ul>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="tags.html">Tags</a></li>
-            <li><a href="nested.html">Nested</a></li>
-        </ul>
-    </nav>
-    <p>
+
+    <h1 class="title"><b>Zoe Siedenstrang's Website</b></h1>
+   
+    <p id="p">
         Welcome to my website. I am a <i>senior</i>
         at <u>Boise State University</u>. <br> I am studying
         <strong>Media Arts and Korean.</strong> I will 
         graduate in <em>May 2022</em>.
     </p>
-    <img src="BSU-logo.jpg" width="150" height="120">
-   
-    <h3>Who is Zoe?</h3>
+     <img class="image" src="BSU-logo.jpg" width="150" height="120">
+    <h3 class="head">Who is Zoe?</h3>
     <img src="picture-zoe.jpeg" width="400" height="420">
     <p>Get to know me! Here are some fun facts all about me...</p>
     <ul>
         <li>I was born and raised in Boise, Idaho.</li>
-        <li>I had a pet pig for 7 years. His name was Chuck.</li>
+        <li id="whoops">I have lived in Boise for 50 years.</li>
+        <li class="pig">I had a pet pig for 7 years. His name was Chuck.</li>
         <li>In 2019, I studied abroad in South Korea.</li>
     </ul>
         <figure>
             <img src="picture-seoul.jpeg" height="450" width="350">
             <figcaption>Namsan Tower - Seoul, South Korea</figcaption>
         </figure>
+    <div>
 <footer>
-    <p>Background Music</p>
+    <p><b>Background Music</b></p>
     <audio controls> 
         <source src="background-music.mp3" type="audio/mp3">
     </audio>
+    <nav>
+        <ul >
+            <li><a href="media.html">Media</a></li>
+            <li><a href="tags.html">Tags</a></li>
+            <li><a href="nested.html">Nested</a></li>
+        </ul>
+    </nav>
 </footer>
+</div>
 </body>
 </html>
